CCSSSCON-341 Initial implementation of intersecting polygon utilities. Not complete yet.

--- a/src/Common/MasterDataRepositories/src/VSS.MasterData.Repositories.csproj
+++ b/src/Common/MasterDataRepositories/src/VSS.MasterData.Repositories.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CCSS.Geometry\src\CCSS.Geometry.csproj" />
     <ProjectReference Include="..\..\ConfigurationStore\src\VSS.ConfigurationStore.csproj" />
     <ProjectReference Include="..\..\LoggingExtensions\SerilogExtensions\VSS.Serilog.Extensions.csproj" />
     <ProjectReference Include="..\..\MasterDataModels\src\VSS.MasterData.Models.csproj" />
