--- a/src/service/TRex/src/tools/VSS.TRex.Webtools/appsettings.json
+++ b/src/service/TRex/src/tools/VSS.TRex.Webtools/appsettings.json
@@ -14,8 +14,5 @@
       }
     ]
   },
-  "AllowedHosts": "*",
-  "AWS_BUCKET_NAME": "vss-exports-stg",
-  "AWS_DESIGNIMPORT_BUCKET_NAME": "vss-project3dp-stg",
-  "AWS_PRESIGNED_URL_EXPIRY": "7.00:00:00"
+  "AllowedHosts": "*"
 }
