--- a/src/config/alpha-config.yaml
+++ b/src/config/alpha-config.yaml
@@ -109,9 +109,9 @@ data:
   PEGASUS_URL: https://api-stg-usw2.trimblepaas.com/processing_stage-v1.0
   SCHEDULER_ENABLE_DXF_TILE_GENERATION: "true"
 #CWS
-  MOCK_CWS_ACCOUNT: "true"
-  MOCK_CWS_DESIGN: "true"
-  MOCK_CWS_DEVICE: "true"
-  MOCK_CWS_PROFILE: "true"
-  MOCK_CWS_PROJECT: "true"
-  MOCK_CWS_USER: "true"
+  MOCK_CWS_ACCOUNT: "false"
+  MOCK_CWS_DESIGN: "false"
+  MOCK_CWS_DEVICE: "false"
+  MOCK_CWS_PROFILE: "false"
+  MOCK_CWS_PROJECT: "false"
+  MOCK_CWS_USER: "false"
