--- a/src/service/Push/test/UnitTests/VSS.Productivity3D.Push.UnitTests/VSS.Productivity3D.Push.UnitTests.csproj
+++ b/src/service/Push/test/UnitTests/VSS.Productivity3D.Push.UnitTests/VSS.Productivity3D.Push.UnitTests.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\..\..\..\..\Common\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\Clients\VSS.Productivity3D.Push.Clients\VSS.Productivity3D.Push.Clients.csproj" />
     <ProjectReference Include="..\..\..\Service\VSS.Productivity3D.Push.Hubs\VSS.Productivity3D.Push.Hubs.csproj" />
+    <ProjectReference Include="..\..\..\Service\VSS.Productivity3D.Push\VSS.Productivity3D.Push.csproj" />
   </ItemGroup>
 
 </Project>
