CCSSSCON-423 Finish coord sys validation. Fix overlap test for 3D projects only.

--- a/src/service/3DP/src/WebApi/appsettings.json
+++ b/src/service/3DP/src/WebApi/appsettings.json
@@ -3,10 +3,17 @@
 
   // Override what's in /config/dev-config.yaml when running locally as we don't want TRex interaction.
   "ENABLE_TREX_GATEWAY_PROJECTSTATISTICS": "false",
-  "ENABLE_TREX_GATEWAY_TAGFILE": "false"
+  "ENABLE_TREX_GATEWAY_TAGFILE": "false",
 
   //"KubernetesContext": "arn:aws:eks:us-west-2:276986344560:cluster/stg",
   //"KubernetesNamespace": "dev",
   //"KubernetesConfigMapName": "3dapp-dev",
   //"UseKubernetes": "true"
+  "cws_profilemanager_public_v1": "https://api-stg.trimble.com/t/trimble.com/connectedsiteprofiles-dev/1.0",
+  "cws_designmanager_public_v1": "https://api-stg.trimble.com/t/trimble.com/cws-designmanager-dev/1.0",
+  "cws_profilesettings_public_v1": "https://api-stg.trimble.com/t/trimble.com/connectedsiteprofilesettings-dev/1.0",
+  "project_service_public_v4": "https://api-stg.trimble.com/t/trimble.com/ccss-3d-dev-project/1.6",
+  "project_service_public_v6": "https://api-stg.trimble.com/t/trimble.com/ccss-3d-dev-project/1.6",
+  "filter_service_public_v1": "https://api-stg.trimble.com/t/trimble.com/ccss-3d-dev-filter/1.0",
+  "trex-service-immutable_public_v1": "http://trex.immutable.dev.eks.ccss.cloud/api/v1/"
 }
