--- a/src/service/TRex/src/interfaces/VSS.TRex.Gateway.Common.Abstractions/VSS.TRex.Gateway.Common.Abstractions.csproj
+++ b/src/service/TRex/src/interfaces/VSS.TRex.Gateway.Common.Abstractions/VSS.TRex.Gateway.Common.Abstractions.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\Common\MasterDataModels\src\VSS.MasterData.Models.csproj" />
+    <ProjectReference Include="..\..\..\..\..\Common\MasterDataProxies\src\VSS.MasterData.Proxies.csproj" />
     <ProjectReference Include="..\..\..\..\..\Common\Productivity3DModels\src\VSS.Productivity3D.Models.csproj" />
   </ItemGroup>
 
