--- a/.gitignore
+++ b/.gitignore
@@ -554,5 +554,8 @@ $RECYCLE.BIN/
 /src/service/TRex/src/tools/VSS.TRex.Webtools/RunMe.bat
 src/service/TRex/src/tools/VSS.TRex.Webtools/ignite/README.txt
 
+
 # Swagger documentation file
 **/src.xml
+**/[Cc]overage*.xml
+**/[Tt]est[Rr]esults.xml
