--- a/src/config/alpha-config.yaml
+++ b/src/config/alpha-config.yaml
@@ -80,6 +80,7 @@ data:
   TILE_CACHE_LIFE: 00:15:00
   CWS_CACHE_LIFE: 00:00:30
   ELEVATION_EXTENTS_CACHE_LIFE: 00:30:00
+  ENTITLEMENT_CACHE_LIFE: 00:05:00
   FILTER_CACHE_LIFE: 00:15:00
   IMPORTED_FILE_CACHE_LIFE: 00:15:00
   PROJECT_CACHE_LIFE: 00:30:00
