CCSSSCON-344 Use CwsProjectType now we have it. Remove our obsolete ProjectType. Stop tag files manual submission for non-3dp projects.

--- a/src/Common/VSS.VisionLink.Interfaces/src/VSS.Visionlink.Interfaces.csproj
+++ b/src/Common/VSS.VisionLink.Interfaces/src/VSS.Visionlink.Interfaces.csproj
@@ -11,4 +11,8 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
+  </ItemGroup>
 </Project>
