Allow disabling of entitlements

--- a/src/config/alpha-config.yaml
+++ b/src/config/alpha-config.yaml
@@ -39,6 +39,7 @@ data:
   ALK_BASE_URL: http://pcmiler.alk.com/APIs/REST/v1.0/Service.svc
   ENVIRONMENT: ALPHA
   CORECLR_ENABLE_PROFILING: "0"
+  ENABLE_ENTITLEMENTS_CHECKING: "false"
 #AWS configuration  
   AWS_DESIGNIMPORT_BUCKET_NAME: s3-pdxa-rpd-trex-designfiles
   AWS_TEMPORARY_BUCKET_NAME: s3-pdxa-rpd-workos-exports
