--- a/src/config/prod-config.yaml
+++ b/src/config/prod-config.yaml
@@ -44,6 +44,7 @@ data:
   ALK_BASE_URL: http://pcmiler.alk.com/APIs/REST/v1.0/Service.svc
   ENVIRONMENT: PROD
   CORECLR_ENABLE_PROFILING: "0"
+  ENABLE_ENTITLEMENTS_CHECKING: "false"
 #AWS configuration  
   AWS_TAGFILE_BUCKET_NAME: s3-pdxa-csp-tagarchive
   AWS_DESIGNIMPORT_BUCKET_NAME: s3-pdxa-csp-trex-files
