Change various config files for trex and all environments.

--- a/src/config/prod-config.yaml
+++ b/src/config/prod-config.yaml
@@ -53,25 +53,26 @@ data:
   USE_LOCAL_S3_TRANSFER_PROXY_STORE: "false"
 #Raptor configuration
   ENABLE_CONNECTED_SITE_GATEWAY: "false"
-  ENABLE_RAPTOR_GATEWAY_DESIGNIMPORT: "true"
-  ENABLE_RAPTOR_GATEWAY_TAGFILE: "true"
-  ENABLE_TREX_GATEWAY_CCA_PALETTE: "false"
-  ENABLE_TREX_GATEWAY_CELL_DATUM: "false"
-  ENABLE_TREX_GATEWAY_DESIGNIMPORT: "false"
-  ENABLE_TREX_GATEWAY_EDIT_DATA: "false"
-  ENABLE_TREX_GATEWAY_ELEVATION: "false"
-  ENABLE_TREX_GATEWAY_EXPORT_PASSCOUNT: "false"
-  ENABLE_TREX_GATEWAY_GRIDREPORT: "false"
-  ENABLE_TREX_GATEWAY_LAYERS: "false"
-  ENABLE_TREX_GATEWAY_LINEWORKFILE: "false"
-  ENABLE_TREX_GATEWAY_MACHINEDESIGNS: "false"
-  ENABLE_TREX_GATEWAY_MACHINES: "false"
-  ENABLE_TREX_GATEWAY_PROJECTSTATISTICS: "false"
-  ENABLE_TREX_GATEWAY_STATIONOFFSET: "false"
-  ENABLE_TREX_GATEWAY_SURFACE: "false"
-  ENABLE_TREX_GATEWAY_TAGFILE: "false"
-  ENABLE_TREX_GATEWAY_TILES: "false"
-  ENABLE_TREX_GATEWAY_VETA: "false"
+  ENABLE_RAPTOR_GATEWAY_DESIGNIMPORT: "false"
+  ENABLE_RAPTOR_GATEWAY_TAGFILE: "false"
+  ENABLE_TREX_GATEWAY_CCA_PALETTE: "true"
+  ENABLE_TREX_GATEWAY_CELL_DATUM: "true"
+  ENABLE_TREX_GATEWAY_DESIGNIMPORT: "true"
+  ENABLE_TREX_GATEWAY_EDIT_DATA: "true"
+  ENABLE_TREX_GATEWAY_ELEVATION: "true"
+  ENABLE_TREX_GATEWAY_EXPORT_PASSCOUNT: "true"
+  ENABLE_TREX_GATEWAY_GRIDREPORT: "true"
+  ENABLE_TREX_GATEWAY_LAYERS: "true"
+  ENABLE_TREX_GATEWAY_LINEWORKFILE: "true"
+  ENABLE_TREX_GATEWAY_MACHINEDESIGNS: "true"
+  ENABLE_TREX_GATEWAY_MACHINES: "true"
+  ENABLE_TREX_GATEWAY_PROJECTSTATISTICS: "true"
+  ENABLE_TREX_GATEWAY_STATIONOFFSET: "true"
+  ENABLE_TREX_GATEWAY_SURFACE: "true"
+  ENABLE_TREX_GATEWAY_TAGFILE: "true"
+  ENABLE_TREX_GATEWAY_TILES: "true"
+  ENABLE_TREX_GATEWAY_VETA: "true"
+  TREX_IS_AVAILABLE: "true"
   ASNODEIP: 10.97.96.150
   IONODEIP: 10.97.96.165
   RAPTORUSERNAME: svcRaptor
@@ -106,7 +107,7 @@ data:
   DATA_OCEAN_URL: https://api-usw2.trimblepaas.com/data_ocean-v1.0
   DATA_OCEAN_UPLOAD_TIMEOUT_MINS: "5"
   DATA_OCEAN_UPLOAD_WAIT_MILLSECS: "1000"
-  DATA_OCEAN_ROOT_FOLDER_ID: 00000000-0000-0000-0000-000000000000
+  DATA_OCEAN_ROOT_FOLDER_ID: a2ea592c-0e77-43aa-b041-8b542a0a9cb4
   ENABLE_DATA_OCEAN: "true"
 #Pegasus
   PEGASUS_DXF_PROCEDURE_ID: cd1ef2a0-63fb-4469-809a-e650c4feb4ca
