--- a/src/service/TRex/tests/netstandard/VSS.TRex.Tests/VSS.TRex.Tests.csproj
+++ b/src/service/TRex/tests/netstandard/VSS.TRex.Tests/VSS.TRex.Tests.csproj
@@ -43,6 +43,7 @@
     <ProjectReference Include="..\..\..\src\gateway\VSS.TRex.Gateway.Common\VSS.TRex.Gateway.Common.csproj" />
     <ProjectReference Include="..\..\..\src\gateway\VSS.TRex.Gateway.WebApi\VSS.TRex.Gateway.WebApi.csproj" />
     <ProjectReference Include="..\..\..\src\interfaces\VSS.TRex.Rendering.Abstractions\VSS.TRex.Rendering.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\src\netstandard\services\VSS.TRex.Server.ProjectRebuilder\VSS.TRex.Server.ProjectRebuilder.csproj" />
     <ProjectReference Include="..\..\..\src\netstandard\VSS.TRex.Alignments\VSS.TRex.Alignments.csproj" />
     <ProjectReference Include="..\..\..\src\netstandard\VSS.TRex.Analytics\VSS.TRex.Analytics.csproj" />
     <ProjectReference Include="..\..\..\src\netstandard\VSS.TRex.Caching.Interfaces\VSS.TRex.Caching.Interfaces.csproj" />
