CCSSSCON-533: Define cache for site model rebuilding metadata

--- a/src/service/TRex/src/netstandard/services/VSS.TRex.Server.ProjectRebuilder/VSS.TRex.Server.ProjectRebuilder.csproj
+++ b/src/service/TRex/src/netstandard/services/VSS.TRex.Server.ProjectRebuilder/VSS.TRex.Server.ProjectRebuilder.csproj
@@ -7,7 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Apache.Ignite" Version="2.8.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,7 +18,9 @@
     <ProjectReference Include="..\..\VSS.TRex.GridFabric.Interfaces\VSS.TRex.GridFabric.Interfaces.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.GridFabric.Models\VSS.TRex.GridFabric.Models.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.GridFabric\VSS.TRex.GridFabric.csproj" />
+    <ProjectReference Include="..\..\VSS.TRex.SiteModels\VSS.TRex.SiteModels.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.Storage.Models\VSS.TRex.Storage.Models.csproj" />
+    <ProjectReference Include="..\..\VSS.TRex.Storage\VSS.TRex.Storage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
