--- a/src/service/TRex/src/netstandard/VSS.TRex.SiteModels/VSS.TRex.SiteModels.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.SiteModels/VSS.TRex.SiteModels.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\VSS.TRex.SiteModelChangeMaps.Interfaces\VSS.TRex.SiteModelChangeMaps.Interfaces.csproj" />
     <ProjectReference Include="..\VSS.TRex.SiteModels.Interfaces\VSS.TRex.SiteModels.Interfaces.csproj" />
     <ProjectReference Include="..\VSS.TRex.Storage.Interfaces\VSS.TRex.Storage.Interfaces.csproj" />
+    <ProjectReference Include="..\VSS.TRex.Storage\VSS.TRex.Storage.csproj" />
     <ProjectReference Include="..\VSS.TRex.SubGridTrees.Core\VSS.TRex.SubGridTrees.Core.csproj" />
     <ProjectReference Include="..\VSS.TRex.SubGridTrees.Interfaces\VSS.TRex.SubGridTrees.Interfaces.csproj" />
     <ProjectReference Include="..\VSS.TRex.SubGridTrees.Server\VSS.TRex.SubGridTrees.Server.csproj" />
