--- a/src/service/TRex/src/netstandard/VSS.TRex.SiteModels/VSS.TRex.SiteModels.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.SiteModels/VSS.TRex.SiteModels.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\VSS.TRex.SubGridTrees.Interfaces\VSS.TRex.SubGridTrees.Interfaces.csproj" />
     <ProjectReference Include="..\VSS.TRex.SubGridTrees.Server\VSS.TRex.SubGridTrees.Server.csproj" />
     <ProjectReference Include="..\VSS.TRex.SurveyedSurfaces.Interfaces\VSS.TRex.SurveyedSurfaces.Interfaces.csproj" />
+    <ProjectReference Include="..\VSS.TRex.TAGFiles\VSS.TRex.TAGFiles.csproj" />
     <ProjectReference Include="..\VSS.TRex.Types\VSS.TRex.Types.csproj" />
   </ItemGroup>
 
