--- a/src/service/TRex/deploy/values.yaml
+++ b/src/service/TRex/deploy/values.yaml
@@ -140,6 +140,24 @@ qmeshServer:
       enabled: true
       target: 100
 
+projectRebuilderServer:
+  replicaCount: 1
+  javaHeapMaxSizeMb: 1024
+  javaHeapInitialSizeMb: 768  
+  resources: 
+    requests:
+      cpu: 300m
+      memory: 1536Mi
+  autoscaling:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 1
+    memory:
+      enabled: false
+      target: 0
+    cpu:
+      enabled: true
+      target: 100
 
 reportServer:
   replicaCount: 1
