--- a/src/config/dev-config.yaml
+++ b/src/config/dev-config.yaml
@@ -40,7 +40,7 @@ data:
   ALK_BASE_URL: http://pcmiler.alk.com/APIs/REST/v1.0/Service.svc
   ENVIRONMENT: DEV
   CORECLR_ENABLE_PROFILING: "0"
-  ENABLE_ENTITLEMENTS_CHECKING: "true"
+  ENABLE_ENTITLEMENTS_CHECKING: "false"
   ENTITLEMENTS_ALLOWED_EMAILS: "elspeth_jeet@trimble.com;elspeth_jeet+dev@trimble.com;karthikeyan_dakshanamurthy+dev@trimble.com;stephen_post@trimble.com;stephen_post+dev@trimble.com;david_glassenbury+dev@trimble.com"
 #AWS configuration  
   AWS_DESIGNIMPORT_BUCKET_NAME: s3-pdxa-rpd-trex-designfiles
