--- a/src/service/TRex/src/netstandard/VSS.TRex.Common.Interfaces/VSS.TRex.Common.Interfaces.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.Common.Interfaces/VSS.TRex.Common.Interfaces.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Common\AWS.TransferProxy\src\VSS.AWS.TransferProxy.csproj" />
     <ProjectReference Include="..\..\netstandard\VSS.TRex.Types\VSS.TRex.Types.csproj" />
   </ItemGroup>
 
