--- a/src/service/TRex/deploy/templates/tinexport/tinexport-server-deployment.yaml
+++ b/src/service/TRex/deploy/templates/tinexport/tinexport-server-deployment.yaml
@@ -40,6 +40,7 @@ spec:
         # Ignite Docker image. Kubernetes IP finder is supported starting from
         # Apache Ignite 2.3.0
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}.TINSurfaceExport
+        imagePullPolicy: Always
 
         resources:
 {{ toYaml .Values.tinExportServer.resources | indent 10 }}
