--- a/src/service/TagFileAuth/src/WebApiModels/VSS.Productivity3D.TagFileAuth.WebAPI.Models.csproj
+++ b/src/service/TagFileAuth/src/WebApiModels/VSS.Productivity3D.TagFileAuth.WebAPI.Models.csproj
@@ -39,4 +39,13 @@
     <ProjectReference Include="..\..\Clients\Models\VSS.Productivity3D.TagFileAuth.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="VSS.Productivity3D.Models">
+      <HintPath>..\..\..\..\Common\Productivity3DModels\src\bin\Debug\netcoreapp3.1\VSS.Productivity3D.Models.dll</HintPath>
+    </Reference>
+    <Reference Include="VSS.TRex.Gateway.Common.Abstractions">
+      <HintPath>..\..\..\TRex\src\interfaces\VSS.TRex.Gateway.Common.Abstractions\bin\Debug\netcoreapp3.1\VSS.TRex.Gateway.Common.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
