--- a/src/config/alpha-config.yaml
+++ b/src/config/alpha-config.yaml
@@ -40,6 +40,7 @@ data:
   ENVIRONMENT: ALPHA
   CORECLR_ENABLE_PROFILING: "0"
   ENABLE_ENTITLEMENTS_CHECKING: "false"
+  ENTITLEMENTS_ALLOWED_EMAILS: "elspeth_jeet@trimble.com;elspeth_jeet+dev@trimble.com;karthikeyan_dakshanamurthy+dev@trimble.com;stephen_post@trimble.com;stephen_post+dev@trimble.com;david_glassenbury+dev@trimble.com;josh_nimmo@trimble.com;josh_nimmo+dev@trimble.com;kirankumar_potnuru@trimble.com"
 #AWS configuration  
   AWS_DESIGNIMPORT_BUCKET_NAME: s3-pdxa-rpd-trex-designfiles
   AWS_TEMPORARY_BUCKET_NAME: s3-pdxa-rpd-workos-exports
@@ -79,7 +80,7 @@ data:
 #Cache
   MAX_FILE_SIZE: "100000000"
   TILE_CACHE_LIFE: 00:15:00
-  CWS_CACHE_LIFE: 00:00:30
+  CWS_CACHE_LIFE: 00:30:00
   ELEVATION_EXTENTS_CACHE_LIFE: 00:30:00
   ENTITLEMENT_CACHE_LIFE: 00:05:00
   FILTER_CACHE_LIFE: 00:15:00
