--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
         <add key="Microsoft and .NET" value="https://www.nuget.org/api/v2/curated-feeds/microsoftdotnet/" />
+        <!-- For TRex TGL packages: Currently not used while we use the libs statically. -->
+        <!-- <add key="trmb-ccss" value="https://pkgs.dev.azure.com/trmb-ccss/_packaging/trmb-ccss/nuget/v3/index.json" /> -->
+        <!-- End TGL -->
     </packageSources>
 </configuration>
