--- a/src/service/TRex/tests/netstandard/VSS.TRex.Designs.TTM.Tests/VSS.TRex.Designs.TTM.Tests.csproj
+++ b/src/service/TRex/tests/netstandard/VSS.TRex.Designs.TTM.Tests/VSS.TRex.Designs.TTM.Tests.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.2" />
     <PackageReference Include="coverlet.msbuild" Version="2.8.1" />
+    <PackageReference Include="NunitXml.TestLogger" Version="2.1.41" />
     <PackageReference Include="XunitXml.TestLogger" Version="2.1.26" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
