--- a/src/Common/CoreX.Wrapper/tests/UnitTests/CoreX.Wrapper.UnitTests.csproj
+++ b/src/Common/CoreX.Wrapper/tests/UnitTests/CoreX.Wrapper.UnitTests.csproj
@@ -8,22 +8,19 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="OpenCover" Version="4.7.922" />
     <PackageReference Include="ReportGenerator" Version="4.5.6" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
-    <PackageReference Include="XunitXml.TestLogger" Version="2.1.26" />
     <PackageReference Include="coverlet.msbuild" Version="2.8.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.console" Version="2.4.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\CoreX.Wrapper.csproj" />
+    <ProjectReference Include="..\..\src\CoreX\CoreX.Wrapper.csproj" />
+    <ProjectReference Include="..\..\src\Models\CoreX.Models.csproj" />
   </ItemGroup>
 
   <!-- Bulk copy static runtime file dependencies. -->
