Increased project reference specificity in CCSS.Geometry project. Minor tidying.

--- a/src/Common/CCSS.Geometry/src/CCSS.Geometry.csproj
+++ b/src/Common/CCSS.Geometry/src/CCSS.Geometry.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MasterDataModels\src\VSS.MasterData.Models.csproj" />
+    <ProjectReference Include="..\..\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
