--- a/src/service/TRex/src/netstandard/services/VSS.TRex.Server.ProjectRebuilder/VSS.TRex.Server.ProjectRebuilder.csproj
+++ b/src/service/TRex/src/netstandard/services/VSS.TRex.Server.ProjectRebuilder/VSS.TRex.Server.ProjectRebuilder.csproj
@@ -18,6 +18,8 @@
     <ProjectReference Include="..\..\VSS.TRex.GridFabric.Interfaces\VSS.TRex.GridFabric.Interfaces.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.GridFabric.Models\VSS.TRex.GridFabric.Models.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.GridFabric\VSS.TRex.GridFabric.csproj" />
+    <ProjectReference Include="..\..\VSS.TRex.SiteModelChangeMaps.Interfaces\VSS.TRex.SiteModelChangeMaps.Interfaces.csproj" />
+    <ProjectReference Include="..\..\VSS.TRex.SiteModelChangeMaps\VSS.TRex.SiteModelChangeMaps.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.SiteModels\VSS.TRex.SiteModels.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.Storage.Models\VSS.TRex.Storage.Models.csproj" />
     <ProjectReference Include="..\..\VSS.TRex.Storage\VSS.TRex.Storage.csproj" />
