Add Jeannie to allowed dev emails

--- a/src/config/dev-config.yaml
+++ b/src/config/dev-config.yaml
@@ -40,7 +40,7 @@ data:
   ENVIRONMENT: DEV
   CORECLR_ENABLE_PROFILING: "0"
   ENABLE_ENTITLEMENTS_CHECKING: "false"
-  ENTITLEMENTS_ALLOWED_EMAILS: "elspeth_jeet@trimble.com;elspeth_jeet+dev@trimble.com;karthikeyan_dakshanamurthy+dev@trimble.com;stephen_post@trimble.com;stephen_post+dev@trimble.com;david_glassenbury+dev@trimble.com;josh_nimmo@trimble.com;josh_nimmo+dev@trimble.com;kirankumar_potnuru@trimble.com"
+  ENTITLEMENTS_ALLOWED_EMAILS: "elspeth_jeet@trimble.com;elspeth_jeet+dev@trimble.com;karthikeyan_dakshanamurthy+dev@trimble.com;stephen_post@trimble.com;stephen_post+dev@trimble.com;david_glassenbury+dev@trimble.com;josh_nimmo@trimble.com;josh_nimmo+dev@trimble.com;kirankumar_potnuru@trimble.com;jeannie_may@trimble.com;jeannie_may+dev@trimble.com"
 #AWS configuration  
   AWS_DESIGNIMPORT_BUCKET_NAME: s3-pdxa-rpd-trex-designfiles
   AWS_TEMPORARY_BUCKET_NAME: s3-pdxa-rpd-workos-exports
