--- a/src/service/TRex/src/tools/VSS.TRex.GridActivator/VSS.TRex.GridActivator.csproj
+++ b/src/service/TRex/src/tools/VSS.TRex.GridActivator/VSS.TRex.GridActivator.csproj
@@ -14,6 +14,8 @@
     <ProjectReference Include="..\..\..\..\..\Common\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
     <ProjectReference Include="..\..\netstandard\VSS.TRex.DI\VSS.TRex.DI.csproj" />
     <ProjectReference Include="..\..\netstandard\VSS.TRex.GridFabric\VSS.TRex.GridFabric.csproj" />
+    <ProjectReference Include="..\..\netstandard\VSS.TRex.SiteModelChangeMaps\VSS.TRex.SiteModelChangeMaps.csproj" />
+    <ProjectReference Include="..\..\netstandard\VSS.TRex.TAGFiles\VSS.TRex.TAGFiles.csproj" />
   </ItemGroup>
 
   <ItemGroup>
