--- a/src/service/TRex/src/netstandard/services/VSS.TRex.Server.ProjectRebuilder/VSS.TRex.Server.ProjectRebuilder.csproj
+++ b/src/service/TRex/src/netstandard/services/VSS.TRex.Server.ProjectRebuilder/VSS.TRex.Server.ProjectRebuilder.csproj
@@ -29,7 +29,7 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="igniteKubeConfig.xml">
+    <None Update="igniteMutableKubeConfig.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
