--- a/src/service/TRex/src/gateway/VSS.TRex.Gateway.WebApi/Properties/launchSettings.json
+++ b/src/service/TRex/src/gateway/VSS.TRex.Gateway.WebApi/Properties/launchSettings.json
@@ -2,8 +2,7 @@
   "profiles": {
     "TRexGateway": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -11,7 +10,7 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values",
       "publishAllPorts": true
     }
