--- a/src/service/Project/docker-compose-local.env
+++ b/src/service/Project/docker-compose-local.env
@@ -38,3 +38,4 @@ trex_service_mutable=http://mockprojectwebapi:5001
 cws_profilemanager_public_v1=http://mockprojectwebapi:5001/api/v1
 cws_designmanager_public_v1=http://mockprojectwebapi:5001/api/v1
 cws_profilesettings_public_v1=http://mockprojectwebapi:5001/api/v1
+cws_devicegateway_public_v2=http://mockprojectwebapi:5001/api/v2
