--- a/src/config/prod-config.yaml
+++ b/src/config/prod-config.yaml
@@ -25,6 +25,7 @@ data:
   cws_profilemanager_public_v1: https://api.trimble.com/t/trimble.com/cws-profilemanager/1.0
   cws_designmanager_public_v1: https://api.trimble.com/t/trimble.com/cws-designmanager/1.0
   cws_profilesettings_public_v1: https://api.trimble.com/t/trimble.com/cws-profilesettings/1.0
+  cws_devicegateway_public_v2: https://api.trimble.com/t/trimble.com/cws-devicegateway/2.0
   PREFERENCE_API_URL: https://api.trimble.com/t/trimble.com/ccss-worksos-preference/1.0
   TILE_BASE_URL: http://tile.prod.ccss.eks/internal/v1
 #SERVICE DISCOVERY REFERENCES
