--- a/src/Common/CoreX.Wrapper/src/CoreX/CoreX.Wrapper.csproj
+++ b/src/Common/CoreX.Wrapper/src/CoreX/CoreX.Wrapper.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Models\CoreX.Models.csproj" />
   </ItemGroup>
 
