--- a/src/service/TRex/src/netstandard/VSS.TRex.DI/VSS.TRex.DI.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.DI/VSS.TRex.DI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\Common\LoggingExtensions\SerilogExtensions\VSS.Serilog.Extensions.csproj" />
+    <ProjectReference Include="..\VSS.TRex.Common.Exceptions\VSS.TRex.Common.Exceptions.csproj" />
     <ProjectReference Include="..\VSS.TRex.Logging\VSS.TRex.Logging.csproj" />
   </ItemGroup>
 
