#CCSSSCON-460 tagFile submission to call deviceGateway with deviceLKS

--- a/src/service/TRex/deploy/templates/mutable-data/mutable-data-statefulset.yaml
+++ b/src/service/TRex/deploy/templates/mutable-data/mutable-data-statefulset.yaml
@@ -63,6 +63,8 @@ spec:
           value: "/trex/"
         - name: ENABLE_TFA_SERVICE
           value: {{ .Values.mutableData.environment.enableTfa | quote }}
+        - name: ENABLE_DEVICE_GATEWAY
+          value: {{ .Values.mutableData.environment.enableDeviceGateway | quote }}
         - name: IS_KUBERNETES
           value: "true"
         - name: DEPLOYED_ENV
