--- a/src/service/TRex/src/netstandard/VSS.TRex.TAGFiles/VSS.TRex.TAGFiles.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.TAGFiles/VSS.TRex.TAGFiles.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\..\..\..\..\Common\MasterDataModels\src\VSS.MasterData.Models.csproj" />
     <ProjectReference Include="..\..\..\..\..\Common\MasterDataProxies\src\VSS.MasterData.Proxies.csproj" />
     <ProjectReference Include="..\..\..\..\..\Common\Productivity3DModels\src\VSS.Productivity3D.Models.csproj" />
+    <ProjectReference Include="..\..\..\..\..\Common\WebApi.Common\src\VSS.WebApi.Common.csproj" />
     <ProjectReference Include="..\..\..\..\TagFileAuth\Clients\Abstractions\VSS.Productivity3D.TagFileAuth.Abstractions.csproj" />
     <ProjectReference Include="..\VSS.TRex.Common.Exceptions\VSS.TRex.Common.Exceptions.csproj" />
     <ProjectReference Include="..\VSS.TRex.DI\VSS.TRex.DI.csproj" />
