--- a/src/Common/CoreX.Wrapper/src/CoreX/CoreX.Wrapper.csproj
+++ b/src/Common/CoreX.Wrapper/src/CoreX/CoreX.Wrapper.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
     <ProjectReference Include="..\Models\CoreX.Models.csproj" />
   </ItemGroup>
 
