--- a/src/service/TagFileGateway/Service/VSS.Productivity3D.TagFileGateway/VSS.Productivity3D.TagFileGateway.csproj
+++ b/src/service/TagFileGateway/Service/VSS.Productivity3D.TagFileGateway/VSS.Productivity3D.TagFileGateway.csproj
@@ -29,6 +29,8 @@
     <ProjectReference Include="..\..\..\Push\Abstractions\VSS.Productivity3D.Push.Abstractions\VSS.Productivity3D.Push.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\Push\Clients\VSS.Productivity3D.Push.Clients\VSS.Productivity3D.Push.Clients.csproj" />
     <ProjectReference Include="..\..\..\Push\WebAPI\VSS.Productivity3D.Push.WebAPI\VSS.Productivity3D.Push.WebAPI.csproj" />
+    <ProjectReference Include="..\..\..\TRex\src\interfaces\VSS.TRex.Gateway.Common.Abstractions\VSS.TRex.Gateway.Common.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\TRex\src\interfaces\VSS.TRex.Gateway.Common.Proxy\VSS.TRex.Gateway.Common.Proxy.csproj" />
     <ProjectReference Include="..\..\VSS.Productivity3D.TagFileGateway.Common\VSS.Productivity3D.TagFileGateway.Common.csproj" />
   </ItemGroup>
 
