--- a/src/service/TRex/src/netstandard/VSS.TRex.Rendering.Implementations.Core2/VSS.TRex.Rendering.Implementations.Core2.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.Rendering.Implementations.Core2/VSS.TRex.Rendering.Implementations.Core2.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
