--- a/src/service/TagFileGateway/deploy/templates/webapideployment.yaml
+++ b/src/service/TagFileGateway/deploy/templates/webapideployment.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: {{ $name }}
 spec:
-  replicas: {{{ .Values.replicaCount }}}
+  replicas: {{{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: {{ $name }}
