--- a/src/service/3DP/test/UnitTests/WebApiTests/VSS.Productivity3D.WebApi.Tests.csproj
+++ b/src/service/3DP/test/UnitTests/WebApiTests/VSS.Productivity3D.WebApi.Tests.csproj
@@ -151,7 +151,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
